fixed gap

--- a/components/header/header.css
+++ b/components/header/header.css
@@ -7,6 +7,7 @@ header {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: 1fr;
+    gap: 10px;
 }
 
 .h_class {
